
wm_tester   = executable(
  'wm-tester',
  'main.c',
  dependencies: [
    gtk,
  ],
)
focus_window  = executable(
  'focus-window',
  'focus-window.c',
  dependencies: [
    gtk, x11lib,
  ],
)
test_attached   = executable(
  'test-attached',
  'test-attached.c',
  dependencies: [
    gtk, x11lib,
  ],
)
test_gravity  = executable(
  'test-gravity',
  'test-gravity.c',
  dependencies: [
    gtk, x11lib,
  ],
)
test_resizing   = executable(
  'test-resizing',
  'test-resizing.c',
  dependencies: [
    gtk, x11lib,
  ],
)
test_size_hints   = executable(
  'test-size-hints',
  'test-size-hints.c',
  dependencies: [
    gtk, x11lib,
  ],
)
